# -online-shop-

./: pyproject.toml
mainapp/: models.py
mainapp/migrations/: 0001_initial.py
shop/: settings.py
