[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["Evgeniy Kovalev"]

[tool.poetry.dependencies]
python = "3.8"
Django = "3.1.6"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]
flake8 = "3.8.4"
flake8-isort = "4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
